View と ViewBuilder を追加。